--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 *DS_Store
-.settings
-.project
-.classpath
-*/dependency-reduced-pom.xml
-*/*.log
-*/bin
+*/.settings
+*/.project
+*/.classpath
 */target
+*/logs
