--- a/jmacro-common/pom.xml
+++ b/jmacro-common/pom.xml
@@ -15,7 +15,7 @@
 
 		<dependency>
 			<groupId>org.eclipse.swt</groupId>
-			<artifactId>org.eclipse.swt.win32.win32.x86</artifactId>
+			<artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
 		</dependency>
 
 		<dependency>
